--- a/recipes/chicago_style_hot_dog.html
+++ b/recipes/chicago_style_hot_dog.html
@@ -9,6 +9,33 @@
 
 <body>
     <h1>Chicago-Style Hot Dog</h1>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9184323.jpg&q=60&c=sc&orient=true&poi=auto&h=512"
+        alt="An image of a Chicago-Style Hot Dog">
+    <h3>Description</h3>
+    <p>This hot dog is a Windy City classic and a big favorite with sports fans! The frank must be all-beef, the bun
+        must be poppy seed, and the ingredients must be piled onto the bun in the order specified. And whatever you do,
+        don't spoil the splendor of this Chicago dog with ketchup!</p>
+    <h3>Description</h3>
+    <ul>
+        <li>1 all-beef hot dog</li>
+        <li>1 poppy seed hot dog bun</li>
+        <li>1 tablespoon yellow mustard</li>
+        <li>1 tablespoon sweet green pickle relish</li>
+        <li>1 tablespoon chopped onion</li>
+        <li>4 tomato wedges</li>
+        <li>1 dill pickle spear</li>
+        <li>2 sport peppers</li>
+        <li>1 dash celery salt</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Bring a pot of water to a boil over high heat. Reduce heat to low, place hot dog in water, and cook until
+            warmed through, about 5 minutes. Remove hot dog from water and set aside.</li>
+        <li>Place a steamer basket into the pot and steam poppy seed bun until warm, about 2 minutes.</li>
+        <li>Place hot dog in steamed bun. Pile on toppings in this order: mustard, relish, onion, tomato, pickle,
+            peppers, and celery salt. The tomato wedges should be nestled between hot dog and top of bun on one side.
+            Place pickle between hot dog and bottom of bun on the other side. Don't even think about ketchup!</li>
+    </ol>
 </body>
 
 </html>
