Add fix to typos

--- a/recipes/chicago_style_hot_dog.html
+++ b/recipes/chicago_style_hot_dog.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Chicago-Style Hot Dog</title>
+    <title>Odin Recipes - Chicago-Style Hot Dog</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
     <p>This hot dog is a Windy City classic and a big favorite with sports fans! The frank must be all-beef, the bun
         must be poppy seed, and the ingredients must be piled onto the bun in the order specified. And whatever you do,
         don't spoil the splendor of this Chicago dog with ketchup!</p>
-    <h3>Description</h3>
+    <h3>Ingredients</h3>
     <ul>
         <li>1 all-beef hot dog</li>
         <li>1 poppy seed hot dog bun</li>
