Add button to go back to index

--- a/recipes/chicago_style_hot_dog.html
+++ b/recipes/chicago_style_hot_dog.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Chicago-Style Hot Dog</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9184323.jpg&q=60&c=sc&orient=true&poi=auto&h=512"
+    <img src="https://www.allrecipes.com/thmb/N4RuViR2tIOninrAZgSR59WMBCI=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/134483-chicago-style-hot-dog-DDMFS-4x3-046e7cb4c2c34b1899211bc78fcc1e31.jpg"
         alt="An image of a Chicago-Style Hot Dog">
     <h3>Description</h3>
     <p>This hot dog is a Windy City classic and a big favorite with sports fans! The frank must be all-beef, the bun
@@ -36,6 +36,8 @@
             peppers, and celery salt. The tomato wedges should be nestled between hot dog and top of bun on one side.
             Place pickle between hot dog and bottom of bun on the other side. Don't even think about ketchup!</li>
     </ol>
+
+    <a href="../index.html">go back</a>
 </body>
 
 </html>
