--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="./recipes/chicago_style_hot_dog.html">Chicago-Style Hot Dog</a>
+    <ul>
+        <li><a href="./recipes/chicago_style_hot_dog.html">Chicago-Style Hot Dog</a></li>
+        <li><a href="./recipes/magnificent_macaroni_salad.html">Magnificent Macaroni Salad</a></li>
+        <li><a href="./recipes/american_potato_salad.html">American Potato Salad</a></li>
+    </ul>
 </body>
 
 </html>
