Add simple CSS styling

--- a/recipes/american_potato_salad.html
+++ b/recipes/american_potato_salad.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>Odin Recipes - American Potato Salad</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -37,7 +38,7 @@
             hours or overnight.</li>
     </ol>
 
-    <a href="../index.html">go back</a>
+    <a href="../index.html">Go back</a>
 </body>
 
 </html>
