--- a/recipes/chicago_style_hot_dog.html
+++ b/recipes/chicago_style_hot_dog.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>Odin Recipes - Chicago-Style Hot Dog</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -37,7 +38,7 @@
             Place pickle between hot dog and bottom of bun on the other side. Don't even think about ketchup!</li>
     </ol>
 
-    <a href="../index.html">go back</a>
+    <a href="../index.html">Go back</a>
 </body>
 
 </html>
