--- a/recipes/magnificent_macaroni_salad.html
+++ b/recipes/magnificent_macaroni_salad.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>Odin Recipes - Magnificent Macaroni Salad</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -35,7 +36,7 @@
         <li>Chill in the refrigerator for 30 minutes before serving.</li>
     </ol>
 
-    <a href="../index.html">go back</a>
+    <a href="../index.html">Go back</a>
 </body>
 
 </html>
