--- a/index.html
+++ b/index.html
@@ -11,11 +11,25 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <ul>
-        <li><a href="./recipes/chicago_style_hot_dog.html">Chicago-Style Hot Dog</a></li>
-        <li><a href="./recipes/magnificent_macaroni_salad.html">Magnificent Macaroni Salad</a></li>
-        <li><a href="./recipes/american_potato_salad.html">American Potato Salad</a></li>
-    </ul>
+    <div id="menu">
+        <h3>Choose a recipe:</h3>
+
+        <div class="menu-element"><img id="thumbnail"
+                src="https://www.allrecipes.com/thmb/N4RuViR2tIOninrAZgSR59WMBCI=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/134483-chicago-style-hot-dog-DDMFS-4x3-046e7cb4c2c34b1899211bc78fcc1e31.jpg"
+                alt="An image of a Chicago-Style Hot Dog">
+            <a href="./recipes/chicago_style_hot_dog.html">Chicago-Style Hot Dog</a>
+        </div>
+        <div class="menu-element"><img id="thumbnail"
+                src="https://www.allrecipes.com/thmb/m9v_F76Pth4gOG0ROU5Tyhh8sV4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1132910-magnificent-macaroni-salad-photo-by-reneepaj-color-corrected-916e5f6f10c349a487d0d65f962ec5f8.jpg"
+                alt="An image of a Magnificent Macaroni Salad">
+            <a href="./recipes/magnificent_macaroni_salad.html">Magnificent Macaroni Salad</a>
+        </div>
+        <div class="menu-element"><img id="thumbnail"
+                src="https://www.allrecipes.com/thmb/pIiQlKTyR02FEgi6uOhs80h1Jso=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4531318-2b65b0ddcd18445c8b2fba7cf016593a.jpg"
+                alt="An image of an American Potato Salad">
+            <a href="./recipes/american_potato_salad.html">American Potato Salad</a>
+        </div>
+    </div>
 </body>
 
 </html>
